update input year

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <div class="">/</div>
 
-          <input type="number" min="1900" max="4000" id="year" />
+          <input type="number" min="1900" id="year" />
         </div>
 
         <div id="confirm-button" class="confirm-btn">OK</div>
