--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <!-- Header -->
-      <h2 id="canlender-header" class="table-header"></h2>
+      <h2 id="calender-header" class="table-header"></h2>
       <h1 id="date-header"></h1>
       <h1 id="week-date"></h1>
 
@@ -27,7 +27,7 @@
           </div>
 
           <!-- Calender table date -->
-          <div id="canlender" class="table-content"></div>
+          <div id="calender" class="table-content"></div>
         </div>
       </div>
 
